test/compile-fail/fixtures/depend-on-entry.as
import index from "../depend-on-entry";
index.method();
